Add missing container image

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -24,7 +24,7 @@ process {
   maxForks = 10
 
   withName: irods {
-    container = ''
+    container = 'quay.io/cellgeni/irods'
     pod = [secret: 'irods-secret', mountPath: '/secret']
     beforeScript = "/iinit.sh"
     cpus = 4
